# matformer-qwen3-test

./: .gitignore  Makefile  README.md  accelerate_config.yaml  matformer_qwen.ipynb  matformer_qwen_before.ipynb  pyproject.toml  run_training.sh  sync_tools.sh  train.py
.github/: pull_request_template.md
.github/workflows/: lint.yaml  slack.yaml
context/: .hadolint.yaml
context/cpu/: docker-compose.yml
context/gpu/: docker-compose.yml
